objects/State_mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>Jira_Sales_Market__c</fullName>
        <label>Jira Sales Market</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_AnthemEntity__c</fullName>
        <label>SFDC AnthemEntity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_ClaimSystem__c</fullName>
        <label>SFDC ClaimSystem</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_JAAIndicator__c</fullName>
        <label>SFDC JAAIndicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Region__c</fullName>
        <label>SFDC Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_SitusState__c</fullName>
        <label>SFDC SitusState</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>State mapping</label>
    <pluralLabel>State mappings</pluralLabel>
</CustomObject>